--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
