--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
-    "js-cookie": "^3.0.5",
+    "htmlparser2": "^9.1.0",
     "lucide-react": "^0.367.0",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
+    "quill": "^2.0.2",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-draft-wysiwyg": "^1.15.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
