--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
     "@tanstack/react-table": "^8.16.0",
+    "amplitudejs": "^5.3.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
