--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-phone-number-input": "^3.4.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
