--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
     "htmlparser2": "^9.1.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.367.0",
     "moment": "^2.30.1",
     "next": "14.1.4",
