--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-type-animation": "^3.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
