--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.367.0",
     "moment": "^2.30.1",
-    "next": "14.1.4",
+    "next": "^14.2.14",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
@@ -51,7 +51,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.1",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-type-animation": "^3.2.0",
